--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ body {
 
 .portofolio{
   background-image: url('a7c4b42e3d72cc0279bda59509976491.jpg');
- height: 210vh;
+ height: 257vh;
 }
 
 .container-text{
@@ -233,6 +233,9 @@ body {
   font-size: 2.9rem;
  display: flex;
  font-weight: bold;
+ height: 50vh;
+ align-items: center;
+ justify-content: center;
  
   
 }
